@@ -17,9 +17,9 @@
   <packaging>jar</packaging>
   <version>1.0.0-beta.1</version> <!-- {x-version-update;com.azure:azure-communication-callautomation;current} -->
 
-  <name>Microsoft Azure client library for CallingServer service</name>
+  <name>Microsoft Azure client library for Call Automation service</name>
   <description>
-    This package contains clients and data structures used to make call with Azure Communication CallingServer Service.
+    This package contains clients and data structures used to make call with Azure Communication Call Automation Service.
     For this release, see notes - https://github.com/Azure/azure-sdk-for-java/blob/master/sdk/communication/azure-communication-callautomation/README.md and https://github.com/Azure/azure-sdk-for-java/blob/master/sdk/communication/azure-communication-callautomation/CHANGELOG.md.
   </description>
   <url>https://github.com/Azure/azure-sdk-for-java</url>
@@ -47,10 +47,16 @@
     <javaModulesSurefireArgLine>
       --add-opens com.azure.communication.callautomation/com.azure.communication.callautomation.implementation=ALL-UNNAMED
       --add-opens com.azure.communication.common/com.azure.communication.common.implementation=ALL-UNNAMED
+      --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
     </javaModulesSurefireArgLine>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-messaging-servicebus</artifactId>
+      <version>7.11.0</version> <!-- {x-version-update;com.azure:azure-messaging-servicebus;dependency} -->
+    </dependency>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
@@ -59,12 +65,12 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-communication-common</artifactId>
-      <version>1.3.0-beta.2</version> <!-- {x-version-update;com.azure:azure-communication-common;current} -->
+      <version>1.2.1</version> <!-- {x-version-update;com.azure:azure-communication-common;dependency} -->
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-communication-identity</artifactId>
-      <version>1.3.0</version> <!-- {x-version-update;com.azure:azure-communication-identity;dependency} -->
+      <version>1.3.1</version> <!-- {x-version-update;com.azure:azure-communication-identity;dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -112,7 +118,7 @@
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-test</artifactId>
-      <version>3.4.22</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
+      <version>3.4.23</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -124,7 +130,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-identity</artifactId>
-      <version>1.5.4</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
+      <version>1.6.0</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
